# loop-goal-skills

./: .gitignore  CHANGELOG.md  LICENSE  README.md  claude-settings.json  pyproject.toml
goal/: SKILL.md
loop/: SKILL.md
loop/assets/: LOOP_STATE.template.md
loop/assets/wiki/: architecture.md  decisions.md  glossary.md  index.md  learnings.md  overview.md
loop/references/: phase-playbooks.md  state-schema.md
loop/scripts/: loop_init.py
loop_goal_skills/: __init__.py  cli.py
